--- a/index.css
+++ b/index.css
@@ -13,7 +13,7 @@ body {
     font-family: Oxygen;
     font-weight: bold;
     text-align: center;
-    color: blue;
+    color: #D2691E ;
     max-width: 100%;
     max-height: min-content;
 }
