--- a/index.css
+++ b/index.css
@@ -29,8 +29,13 @@ h2 {
     margin-bottom: 20px;
 }
 h3 {
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+h4 {
+    font-size: 50px;
+    margin-top: 0;
+    margin-bottom: 20px;
 }
 button {
     border: none;
